feat(core): establish foundational backend services, admin panel, authentication, and audit logging